# kusara

./: .gitignore  Cargo.toml  README.md  deny.toml
.claude-plugin/: README.md  marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
agents/: doc-maintainer.md
claude-plugin/: README.md  plugin.json
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/commands/: add-ref.md  setup.md  sync.md
claude-plugin/skills/kinds-manifest/: SKILL.md
claude-plugin/skills/refs-schema/: SKILL.md
claude-plugin/skills/refs-schema/references/: refs.md  relations-cheatsheet.md
commands/: add-ref.md  check.md  setup.md  sync.md
docs/: kinds.md
docs/superpowers/plans/: 2026-06-10-html-doc-support.md
docs/superpowers/specs/: 2026-06-10-html-doc-support-design.md
skills/kinds-manifest/: SKILL.md
skills/kinds-manifest/references/: kinds.md
skills/refs-schema/: SKILL.md
skills/refs-schema/references/: refs.md  relations-cheatsheet.md
src/: main.rs
tests/: integration.rs
