[package]
name = "kssni"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/reedom/kssni"
description = "Cross-reference graph tooling for Markdown specs and docs"
readme = "README.md"
keywords = ["markdown", "documentation", "cross-reference", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "kssni"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
glob = "0.3"
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
walkdir = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
